@@ -44,6 +44,7 @@ Version 6.4.17
     Tag "&amp;" ergänzt
   - Bugfix: "Conditional jump or move depends on uninitialised value" in
     MkTime behoben.
+  - Bugfix: Race Condition in CAssocArray::Copy behoben
 
 Version 6.4.16 vom 19.05.2013	(SVN-Tag: REL_6_4_16)
   - Bugfix: Fehlende "IFDEF"'s zur Prüfung der Syslog-Unterstützung in CLog
